samples/errors/undefined_variable.lox
// Error: Undefined variable
// expect: runtime error
print x;
